# 02-Introduction

./: .gitpod.Dockerfile  cabal.project  cabal.project.freeze  hie.yaml  introduction.cabal
.devcontainer/: Dockerfile  devcontainer.json
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: Chains.hs
test/: Spec.hs
