cabal-version:       3.4
name:                introduction
version:             0.1.0.0
build-type:          Simple

common common
  build-depends:       base ^>= 4.18.1
  ghc-options:         -Wall

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     Chains

test-suite introduction-test
  import:              common
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       hspec
                     , introduction
